--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         <!--Insert image after resizing in Photoshop-->
         <p>
             My name is Gia. The purpose of this website is to showcase my life and spread awareness about the importance of mental health, 
-            as well as how I get through everyday life with my diagnosis.</p>
+            as well as how I get through everyday life with my diagnosis.
+        </p>
         <p>
             I have been struggling with my own mental health for several years now. I am currently diagnosed with an unspecified mood disorder. 
             Basically what that means is I struggle with emotional regulation and staying in a wise mind in respect to relationships.
