Reformatting with div

--- a/about.html
+++ b/about.html
@@ -31,25 +31,38 @@
         </ul>
     </nav>
     <main>
-        <h1>About Me</h1>
-        <!--Insert image after resizing in Photoshop-->
-        <p>
-            Hi, my name is Gia! I grew up in a small town in the bottom right corner of Pennsylvania that is one of the two 
-            towns that grow most of the mushrooms consumed in the United States. The funny thing is I do not like eating mushrooms at all. 
-        </p>
-        <p>
-            As a kid, I was very shy. I was diagnosed with selective mutism when I was young. 
-            Selective mutism is a severe anxiety disorder where the person will not talk in certain social situations.        
-        </p>
-        <p>
-            Currently, I am a third-year Entrepreneurship & Innovation student at Drexel University. My program is a five-year three-co-op plan. 
-            I have two minors. One in Marketing and one in User Experience & Interaction Design. My goal in life is to run my own business rather than work a corporate job. 
-            My dream job is to run and operate my own microbrewery or brewpub where I would make specialty flavors and drinks.        
-        </p>
-        <p>
-            Outside of work and school, I have a couple of hobbies and interests. I like to exercise, watch Netflix, talk to friends on Discord, 
-            read self-help books, and I have recently picked up embroidery.        
-        </p>
+        <div>
+            <h1>About Me</h1>
+        </div>
+        <div>
+            
+            <!--Insert image after resizing in Photoshop-->
+        </div>
+        <div>
+            <p>
+                Hi, my name is Gia! I grew up in a small town in the bottom right corner of Pennsylvania that is one of the two 
+                towns that grow most of the mushrooms consumed in the United States. The funny thing is I do not like eating mushrooms at all. 
+            </p>        
+        </div>
+        <div>
+            <p>
+                As a kid, I was very shy. I was diagnosed with selective mutism when I was young. 
+                Selective mutism is a severe anxiety disorder where the person will not talk in certain social situations.        
+            </p>        
+        </div>
+        <div>
+            <p>
+                Currently, I am a third-year Entrepreneurship & Innovation student at Drexel University. My program is a five-year three-co-op plan. 
+                I have two minors. One in Marketing and one in User Experience & Interaction Design. My goal in life is to run my own business rather than work a corporate job. 
+                My dream job is to run and operate my own microbrewery or brewpub where I would make specialty flavors and drinks.        
+            </p>        
+        </div>
+        <div>
+            <p>
+                Outside of work and school, I have a couple of hobbies and interests. I like to exercise, watch Netflix, talk to friends on Discord, 
+                read self-help books, and I have recently picked up embroidery.        
+            </p>        
+        </div>
     </main>
     <footer>
         <p>Copyright © 2023 Gia Tranchitella</p>
