--- a/contact.html
+++ b/contact.html
@@ -31,17 +31,28 @@
         </ul>
     </nav>
     <main>
-        <h1>Contact Me!</h1>
-        <!--Insert image after resizing in Photoshop-->
-        <p>
-            There are a couple of ways to contact me. You can reach me on social media or via Email. My handles are below!        
-        </p>
-        <p>
-            Email: gia.tranchitella@gmail.com
-        </p>
-        <p>
-            Instagram: @gtranchitella
-        </p>
+        <div>
+            <h1>Contact Me!</h1>
+        </div>
+        <div>
+            <!--Insert image after resizing in Photoshop-->
+  
+        </div>
+        <div>
+            <p>
+                There are a couple of ways to contact me. You can reach me on social media or via Email. My handles are below!        
+            </p> 
+        </div>
+        <div>
+            <p>
+                Email: gia.tranchitella@gmail.com
+            </p>     
+        </div>
+        <div>
+            <p>
+                Instagram: @gtranchitella
+            </p>        
+        </div>
     </main>
     <footer>
         <p>Copyright © 2023 Gia Tranchitella</p>
