--- a/experience.html
+++ b/experience.html
@@ -31,52 +31,72 @@
         </ul>
     </nav>
     <main>
-        <h1>Work Experience</h1>
-        <h2>Marketing Associate | OpenForge - Startup Wars</h2>
-        <p>
-            Philadelphia, PA | March 2022 - September 2022
-        </p>
-        <ul>
-            <li>
-                Conducted research content creation as input for the company’s website articles
-            </li>
-            <li>
-                Performed Search Engine Optimization (SEO) research for articles making adjustments using WordPress
-            </li>
-            <li>
-                Designed company’s website pages including low-definition mockups and final designs in Figma
-            </li>
-            <li>
-                Developed marketing automation steps for the website's landing pages in ActiveCampaign
-            </li>
-        </ul>
-        <h2>Marketing Assistant | DreamIt Ventures</h2>
-        <p>
-            Philadelphia, PA | January 2022 - April 2022        
-        </p>
-        <ul>
-            <li>
-                Wrote blog posts that accompany instructional videos to assist customers on how to best approach a venture capital process            
-            </li>
-            <li>
-                Curated social media content to broadcast blogs and videos            
-            </li>
-        </ul>
-        <h2>Customer Service/Sales | Pepper Lane Fudge & Sweets</h2>
-        <p>
-            Intercourse, PA | July 2019 - September 2021        
-        </p>
-        <ul>
-            <li>
-                Compose a variety of different chocolates for specialty chocolate and fudge shop            
-            </li>
-            <li>
-                Assist customers with pricing information and answer any questions            
-            </li>
-            <li>
-                Ensure customers had an excellent experience and give recommendations on products            
-            </li>
-        </ul>
+        <div>
+            <h1>Work Experience</h1>
+        </div>
+        <div>
+            <h2>Marketing Associate | OpenForge - Startup Wars</h2>
+        </div>
+        <div>
+            <p class="time">
+                Philadelphia, PA | March 2022 - September 2022
+            </p>
+        </div>
+        <div>
+            <ul>
+                <li>
+                    Conducted research content creation as input for the company’s website articles
+                </li>
+                <li>
+                    Performed Search Engine Optimization (SEO) research for articles making adjustments using WordPress
+                </li>
+                <li>
+                    Designed company’s website pages including low-definition mockups and final designs in Figma
+                </li>
+                <li>
+                    Developed marketing automation steps for the website's landing pages in ActiveCampaign
+                </li>
+            </ul> 
+        </div>
+        <div>
+            <h2>Marketing Assistant | DreamIt Ventures</h2>
+        </div>
+        <div>
+            <p class="time">
+                Philadelphia, PA | January 2022 - April 2022        
+            </p>
+        </div>
+        <div>
+            <ul>
+                <li>
+                    Wrote blog posts that accompany instructional videos to assist customers on how to best approach a venture capital process            
+                </li>
+                <li>
+                    Curated social media content to broadcast blogs and videos            
+                </li>
+            </ul>
+        </div>
+        <div>
+            <h2>Customer Service/Sales | Pepper Lane Fudge & Sweets</h2>
+        </div>
+        <div>
+            <p class="time">
+                Intercourse, PA | July 2019 - September 2021        
+            </p>
+        </div>
+        <div>
+            <ul>
+                <li>
+                    Compose a variety of different chocolates for specialty chocolate and fudge shop            
+                </li>
+                <li>
+                    Assist customers with pricing information and answer any questions            
+                </li>
+                <li>
+                    Ensure customers had an excellent experience and give recommendations on products            
+                </li>
+            </ul>
+        </div>
     </main>
     <footer>
         <p>Copyright © 2023 Gia Tranchitella</p>
