--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+
     <nav>
         <ul>
             <li>
@@ -29,21 +30,29 @@
                 <a href="contact.html">Contact</a>
             </li>
         </ul>
-    </nav>
+    </nav> -->
     <main>
-        <h1>Welcome To A Peak Into My Life</h1>
+        <div>
+            <h1>Welcome To A Peak Into My Life</h1>
+        </div>
         <!--Insert image after resizing in Photoshop-->
-        <p>
-            My name is Gia. The purpose of this website is to showcase my life and spread awareness about the importance of mental health, 
-            as well as how I get through everyday life with my diagnosis.
-        </p>
-        <p>
-            I have been struggling with my own mental health for several years now. I am currently diagnosed with an unspecified mood disorder. 
-            Basically what that means is I struggle with emotional regulation and staying in a wise mind in respect to relationships.
-        </p>
-        <p>
-            Please browse around my site and contact me with any questions or concerns!
-        </p>
+        <div>
+            <p>
+                My name is Gia. The purpose of this website is to showcase my life and spread awareness about the importance of mental health, 
+                as well as how I get through everyday life with my diagnosis.
+            </p>
+        </div>
+        <div>
+            <p>
+                I have been struggling with my own mental health for several years now. I am currently diagnosed with an unspecified mood disorder. 
+                Basically what that means is I struggle with emotional regulation and staying in a wise mind in respect to relationships.
+            </p>
+        </div>
+        <div>
+            <p>
+                Please browse around my site and contact me with any questions or concerns!
+            </p>
+        </div>
     </main>
     <footer>
         <p>Copyright © 2023 Gia Tranchitella</p>
