Hamburger menu icon

--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
     <nav>
+        <div class="container" onclick="myFunction(this)">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+        </div>
+        <script>
+        function myFunction(x) {
+            x.classList.toggle("change)");}
+        </script>
+    </nav>
+<!--    <nav>
         <ul>
             <li>
                 <a href="index.html">Home</a>
