--- a/books.html
+++ b/books.html
@@ -9,29 +9,36 @@
 </head>
 <body>
     <nav>
-        <ul>
-            <li>
+        <div id="main">
+            <button class="openbtn" onclick="openNav()">☰</button>  
+        </div>
+        <div>
+            <div id="mySidebar" class="sidebar">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
                 <a href="index.html">Home</a>
-            </li>
-            <li>
                 <a href="about.html">About</a>
-            </li>
-            <li>
                 <a href="books.html">Books</a>
-            </li>
-            <li>
                 <a href="embroidery.html">Embroidery</a>
-            </li>
-            <li>
                 <a href="experience.html">Experience</a>
-            </li>
-            <li>
                 <a href="contact.html">Contact</a>
-            </li>
-        </ul>
+            </div>
+        </div>
+        <script>
+            function openNav() {
+            document.getElementById("mySidebar").style.width = "250px";
+            document.getElementById("main").style.marginLeft = "250px";
+            }
+            
+            function closeNav() {
+            document.getElementById("mySidebar").style.width = "0";
+            document.getElementById("main").style.marginLeft= "0";
+            }
+        </script>
     </nav>
     <main>
-        <h1>Books I Want To Read</h1>
+        <div>
+            <h1>Books I Want To Read</h1>
+        </div>
         <!--Insert images after resizing in Photoshop-->
     </main>
     <footer>
