Adding small images only

--- a/about.html
+++ b/about.html
@@ -40,8 +40,10 @@
             <h1>About Me</h1>
         </div>
         <div>
-            
-            <!--Insert image after resizing in Photoshop-->
+            <figure>
+                <img alt="gia" srcset="media/small/gia.jpg 400w" 
+                src="media/small/gia.jpg" loading="lazy">
+            </figure>
         </div>
         <div>
             <p>
