--- a/embroidery.html
+++ b/embroidery.html
@@ -36,15 +36,44 @@
         </script>
     </nav>
     <main>
-        <h1>My Embroidery Projects</h1>
-        <!--Insert image after resizing in Photoshop-->
-        <p>
-            My recently started and current hobby I started a couple of months ago is embroidering. 
-            My sister, Marisa, gave me some of her materials to borrow - she had done embroidering too.         
-        </p>
-        <p>
-            Below are some of the projects I have created so far! :D        
-        </p>
+        <div>
+            <h1>My Embroidery Projects</h1>
+        </div>
+        <div>
+            <p>
+                My recently started and current hobby I started a couple of months ago is embroidering. 
+                My sister, Marisa, gave me some of her materials to borrow - she had done embroidering too.         
+            </p>        
+        </div>
+        <div>
+            <p>
+                Below are some of the projects I have created so far! :D        
+            </p>
+        </div>
+        <div>
+            <figure>
+                <img alt="beta" srcset="media/small/beta.jpg 400w" 
+                src="media/small/beta.jpg" loading="lazy">
+            </figure>        
+        </div>
+        <div>
+            <figure>
+                <img alt="bookshelf" srcset="media/small/bookshelf.jpg 400w" 
+                src="media/small/bookshelf.jpg" loading="lazy">
+            </figure>    
+        </div>
+        <div>
+            <figure>
+                <img alt="frog" srcset="media/small/frog.jpg 400w" 
+                src="media/small/frog.jpg" loading="lazy">
+            </figure>  
+        </div>
+        <div>
+            <figure>
+                <img alt="wooper" srcset="media/small/woopers.jpg 400w" 
+                src="media/small/woopers.jpg" loading="lazy">
+            </figure>  
+        </div>
     </main>
     <footer>
         <p>Copyright © 2023 Gia Tranchitella</p>
