--- a/books.html
+++ b/books.html
@@ -40,6 +40,42 @@
             <h1>Books I Want To Read</h1>
         </div>
         <!--Insert images after resizing in Photoshop-->
+        <div>
+            <figure>
+                <img alt="101 essays" srcset="media/small/101essays.jpg 350w" 
+                src="media/small/101essays.jpg" loading="lazy">
+            </figure>
+        </div>
+        <div>
+            <figure>
+                <img alt="subtle art" srcset="media/small/thesubtleart.jpg 350w" 
+                src="media/small/thesubtleart.jpg" loading="lazy">
+            </figure>
+        </div>
+        <div>
+            <figure>
+                <img alt="thinking fast and slow" srcset="media/small/thinkingfastandslow.jpg 350w" 
+                src="media/small/thinkingfastandslow.jpg" loading="lazy">
+            </figure>
+        </div>
+        <div>
+            <figure>
+                <img alt="creative confidence" srcset="media/small/creativeconfidence.jpg 350w" 
+                src="media/small/creativeconfidence.jpg" loading="lazy">
+            </figure>
+        </div>
+        <div>
+            <figure>
+                <img alt="seven habits" srcset="media/small/sevenhabits.jpg 350w" 
+                src="media/small/sevenhabits.jpg" loading="lazy">
+            </figure>
+        </div>
+        <div>
+            <figure>
+                <img alt="coffee" srcset="media/small/beforethecoffee.jpg 350w" 
+                src="media/small/beforethecoffee.jpg" loading="lazy">
+            </figure>
+        </div>
     </main>
     <footer>
         <p>Copyright © 2023 Gia Tranchitella</p>
