--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
         </div>
         <div>
             <figure>
-                <img alt="gia" srcset="media/small/gia.jpg 400w" 
+                <img alt="gia" srcset="media/small/gia.jpg 300w, media/large/gia.jpg 450w" 
                 src="media/small/gia.jpg" loading="lazy">
             </figure>
         </div>
