adding more content

--- a/contact.html
+++ b/contact.html
@@ -58,6 +58,12 @@
                 Instagram: @gtranchitella
             </p>        
         </div>
+        <div>
+            <p>
+                If you do reach out to me, whether it be via Email or Instagram, please be polite and keep in mind it may take
+                me some time to get back to you. I am a full time student.
+            </p>
+        </div>
     </main>
     <footer>
         <p>Copyright © 2023 Gia Tranchitella</p>
