Adding responsive images (books.jpg)

--- a/books.html
+++ b/books.html
@@ -40,6 +40,13 @@
             <h1>Books I Want To Read</h1>
         </div>
         <!--Insert images after resizing in Photoshop-->
+        <div class="responsive">
+            <figure>
+                <img srcset="media/large/largebooks.jpg 1024w, media/medium/mediumbooks.jpg 640w, media/small/smallbooks.jpg 320w"
+                src="media/small/smallbooks.jpg" alt="stacked books" 
+                sizes="(max-width: 600px) 80vw, 95vw">
+            </figure>
+        </div>
         <div>
             <figure>
                 <img alt="101 essays" srcset="media/small/101essays.jpg 350w" 
