Redoing img informatioin

--- a/about.html
+++ b/about.html
@@ -41,8 +41,7 @@
         </div>
         <div>
             <figure>
-                <img alt="gia" srcset="media/small/gia.jpg 300w, media/large/gia.jpg 450w" 
-                src="media/small/gia.jpg" loading="lazy">
+                <img alt="gia" src="media/small/gia.jpg" height="300" width="300" loading="lazy">
             </figure>
         </div>
         <div>
