Deleting the srcset of images bc no longer needed

--- a/books.html
+++ b/books.html
@@ -49,37 +49,36 @@
         </div>
         <div>
             <figure>
-                <img alt="101 essays" srcset="media/small/101essays.jpg 350w" 
-                src="media/small/101essays.jpg" loading="lazy">
+                <img alt="101 essays" src="media/small/101essays.jpg" loading="lazy">
             </figure>
         </div>
         <div>
             <figure>
-                <img alt="subtle art" srcset="media/small/thesubtleart.jpg 350w" 
+                <img alt="subtle art"
                 src="media/small/thesubtleart.jpg" loading="lazy">
             </figure>
         </div>
         <div>
             <figure>
-                <img alt="thinking fast and slow" srcset="media/small/thinkingfastandslow.jpg 350w" 
+                <img alt="thinking fast and slow" 
                 src="media/small/thinkingfastandslow.jpg" loading="lazy">
             </figure>
         </div>
         <div>
             <figure>
-                <img alt="creative confidence" srcset="media/small/creativeconfidence.jpg 350w" 
+                <img alt="creative confidence" 
                 src="media/small/creativeconfidence.jpg" loading="lazy">
             </figure>
         </div>
         <div>
             <figure>
-                <img alt="seven habits" srcset="media/small/sevenhabits.jpg 350w" 
+                <img alt="seven habits" 
                 src="media/small/sevenhabits.jpg" loading="lazy">
             </figure>
         </div>
         <div>
             <figure>
-                <img alt="coffee" srcset="media/small/beforethecoffee.jpg 350w" 
+                <img alt="coffee" 
                 src="media/small/beforethecoffee.jpg" loading="lazy">
             </figure>
         </div>
