redoing the format of the images

--- a/books.html
+++ b/books.html
@@ -49,37 +49,36 @@
         </div>
         <div>
             <figure>
-                <img alt="101 essays" src="media/small/101essays.jpg" loading="lazy">
+                <img alt="coffee" 
+                src="media/small/beforethecoffee.jpg" height="242" width="175" loading="lazy">
             </figure>
         </div>
         <div>
             <figure>
                 <img alt="subtle art"
-                src="media/small/thesubtleart.jpg" loading="lazy">
+                src="media/small/thesubtleart.jpg" height="262" width="175" loading="lazy">
             </figure>
         </div>
         <div>
             <figure>
-                <img alt="thinking fast and slow" 
-                src="media/small/thinkingfastandslow.jpg" loading="lazy">
+                <img alt="everything is fucked" src="media/small/eif.jpg" height="264" width="175" loading="lazy">
+            </figure>
+        </div>
+        <div>
+            <figure>
+                <img src="media/small/getyourshittogether.jpg" height="247" width="175" alt="get your shit together" loading="lazy">
             </figure>
         </div>
         <div>
             <figure>
                 <img alt="creative confidence" 
-                src="media/small/creativeconfidence.jpg" loading="lazy">
+                src="media/small/creativeconfidence.jpg" height="269" width="175" loading="lazy">
             </figure>
         </div>
         <div>
             <figure>
-                <img alt="seven habits" 
-                src="media/small/sevenhabits.jpg" loading="lazy">
-            </figure>
-        </div>
-        <div>
-            <figure>
-                <img alt="coffee" 
-                src="media/small/beforethecoffee.jpg" loading="lazy">
+                <img alt="thinking fast and slow" 
+                src="media/small/thinkingfastandslow.jpg" height="276" width="175" loading="lazy">
             </figure>
         </div>
     </main>
