Adding classes to the image's div elements

--- a/books.html
+++ b/books.html
@@ -47,35 +47,35 @@
                 sizes="(max-width: 600px) 80vw, 95vw">
             </figure>
         </div>
-        <div>
+        <div class="left">
             <figure>
                 <img alt="coffee" 
                 src="media/small/beforethecoffee.jpg" height="242" width="175" loading="lazy">
             </figure>
         </div>
-        <div>
+        <div class="right">
             <figure>
                 <img alt="subtle art"
                 src="media/small/thesubtleart.jpg" height="262" width="175" loading="lazy">
             </figure>
         </div>
-        <div>
+        <div class="left">
             <figure>
                 <img alt="everything is fucked" src="media/small/eif.jpg" height="264" width="175" loading="lazy">
             </figure>
         </div>
-        <div>
+        <div class="right">
             <figure>
                 <img src="media/small/getyourshittogether.jpg" height="247" width="175" alt="get your shit together" loading="lazy">
             </figure>
         </div>
-        <div>
+        <div class="left">
             <figure>
                 <img alt="creative confidence" 
                 src="media/small/creativeconfidence.jpg" height="269" width="175" loading="lazy">
             </figure>
         </div>
-        <div>
+        <div class="right">
             <figure>
                 <img alt="thinking fast and slow" 
                 src="media/small/thinkingfastandslow.jpg" height="276" width="175" loading="lazy">
