Redoing classes for div and figure elements

--- a/books.html
+++ b/books.html
@@ -44,39 +44,39 @@
             <figure>
                 <img srcset="media/large/largebooks.jpg 1024w, media/medium/mediumbooks.jpg 640w, media/small/smallbooks.jpg 320w"
                 src="media/small/smallbooks.jpg" alt="stacked books" 
-                sizes="(max-width: 600px) 80vw, 95vw">
+                sizes="(max-width: 600px) 75vw, 100vw">
             </figure>
         </div>
-        <div class="left">
-            <figure>
+        <div class="parent">
+            <figure class="1">
                 <img alt="coffee" 
                 src="media/small/beforethecoffee.jpg" height="242" width="175" loading="lazy">
             </figure>
         </div>
-        <div class="right">
-            <figure>
+        <div class="parent">
+            <figure class="2">
                 <img alt="subtle art"
                 src="media/small/thesubtleart.jpg" height="262" width="175" loading="lazy">
             </figure>
         </div>
-        <div class="left">
-            <figure>
+        <div class="parent">
+            <figure class="3">
                 <img alt="everything is fucked" src="media/small/eif.jpg" height="264" width="175" loading="lazy">
             </figure>
         </div>
-        <div class="right">
-            <figure>
+        <div class="parent">
+            <figure class="4">
                 <img src="media/small/getyourshittogether.jpg" height="247" width="175" alt="get your shit together" loading="lazy">
             </figure>
         </div>
-        <div class="left">
-            <figure>
+        <div class="parent">
+            <figure class="5">
                 <img alt="creative confidence" 
                 src="media/small/creativeconfidence.jpg" height="269" width="175" loading="lazy">
             </figure>
         </div>
-        <div class="right">
-            <figure>
+        <div class="parent">
+            <figure class="6">
                 <img alt="thinking fast and slow" 
                 src="media/small/thinkingfastandslow.jpg" height="276" width="175" loading="lazy">
             </figure>
