Putting in image sizes

--- a/embroidery.html
+++ b/embroidery.html
@@ -39,6 +39,7 @@
         <div>
             <h1>My Embroidery Projects</h1>
         </div>
+        <!--Add in materials photo-->
         <div>
             <p>
                 My recently started and current hobby I started a couple of months ago is embroidering. 
@@ -52,25 +53,25 @@
         </div>
         <div>
             <figure>
-                <img alt="beta" srcset="media/small/beta.jpg 400w" 
+                <img alt="beta" srcset="media/small/beta.jpg" height="275" width="300"
                 src="media/small/beta.jpg" loading="lazy">
             </figure>        
         </div>
         <div>
             <figure>
-                <img alt="bookshelf" srcset="media/small/bookshelf.jpg 400w" 
+                <img alt="bookshelf" srcset="media/small/bookshelf.jpg" height="278" width="300" 
                 src="media/small/bookshelf.jpg" loading="lazy">
             </figure>    
         </div>
         <div>
             <figure>
-                <img alt="frog" srcset="media/small/frog.jpg 400w" 
+                <img alt="frog" srcset="media/small/frog.jpg" height="283" width="300" 
                 src="media/small/frog.jpg" loading="lazy">
             </figure>  
         </div>
         <div>
             <figure>
-                <img alt="wooper" srcset="media/small/woopers.jpg 400w" 
+                <img alt="woopers" srcset="media/small/woopers.jpg" height="283" width="300"
                 src="media/small/woopers.jpg" loading="lazy">
             </figure>  
         </div>
