Adding class to figures

--- a/embroidery.html
+++ b/embroidery.html
@@ -52,25 +52,25 @@
             </p>
         </div>
         <div>
-            <figure>
+            <figure class="flip">
                 <img alt="beta" srcset="media/small/beta.jpg" height="275" width="300"
                 src="media/small/beta.jpg" loading="lazy">
             </figure>        
         </div>
         <div>
-            <figure>
+            <figure class="flip">
                 <img alt="bookshelf" srcset="media/small/bookshelf.jpg" height="278" width="300" 
                 src="media/small/bookshelf.jpg" loading="lazy">
             </figure>    
         </div>
         <div>
-            <figure>
+            <figure class="flip">
                 <img alt="frog" srcset="media/small/frog.jpg" height="283" width="300" 
                 src="media/small/frog.jpg" loading="lazy">
             </figure>  
         </div>
         <div>
-            <figure>
+            <figure class="flip">
                 <img alt="woopers" srcset="media/small/woopers.jpg" height="283" width="300"
                 src="media/small/woopers.jpg" loading="lazy">
             </figure>  
