Adding logo to contact and index

--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,12 @@
                 me some time to get back to you. I am a full time student.
             </p>
         </div>
+        <div>
+            <figure class="logo">
+                <img alt="A Peak Into My Life" 
+                src="media/small/logo.jpg" height="339" width="350" loading="lazy">
+            </figure>
+        </div>
     </main>
     <footer>
         <p>Copyright © 2023 Gia Tranchitella</p>
