--- a/index.html
+++ b/index.html
@@ -69,9 +69,12 @@
     <main>
         <div>
             <h1>Welcome To A Peak Into My Life</h1>
-        </div>
-        <!--Insert image after resizing in Photoshop-->
-        <div>
+            <div>
+                <figure class="logo">
+                    <img alt="A Peak Into My Life" 
+                    src="media/small/logo.jpg" height="339" width="350" loading="lazy">
+                </figure>
+            </div>
             <p>
                 My name is Gia. The purpose of this website is to showcase my life and spread awareness about the importance of mental health, 
                 as well as how I get through everyday life with my diagnosis.
