Adding responsive materials image

--- a/embroidery.html
+++ b/embroidery.html
@@ -38,9 +38,13 @@
     <main>
         <div>
             <h1>My Embroidery Projects</h1>
-        </div>
-        <!--Add in materials photo-->
-        <div>
+            <div class="responsive">
+                <figure>
+                    <img srcset="media/large/embroideryL.jpg 1024w, media/medium/embroideryM.jpg 640w, media/small/embroideryS.jpg 320w"
+                    src="media/small/embroideryS.jpg" alt="embroidery tools" 
+                    sizes="(min-width: 600px) 75vw, 100vw">
+                </figure>
+            </div>
             <p>
                 My recently started and current hobby I started a couple of months ago is embroidering. 
                 My sister, Marisa, gave me some of her materials to borrow - she had done embroidering too.         
