--- a/about.html
+++ b/about.html
@@ -39,10 +39,17 @@
         <div>
             <h1>About Me</h1>
         </div>
-        <div>
-            <figure>
-                <img alt="gia" src="media/small/gia.jpg" height="300" width="300" loading="lazy">
-            </figure>
+        <div class="about">
+            <div>
+                <figure class="left">
+                    <img alt="gia" src="media/small/gia2.jpg" height="300" width="287" loading="lazy">
+                </figure>
+            </div>
+            <div>
+                <figure class="right">
+                    <img alt="gia" src="media/small/gia3.jpg" height="300" width="275" loading="lazy">
+                </figure>
+            </div>
         </div>
         <div>
             <p>
