Adding comments as reminders

--- a/experience.html
+++ b/experience.html
@@ -47,6 +47,7 @@
                 Philadelphia, PA | March 2022 - September 2022
             </p>
         </div>
+        <!--ADD LOGO IMAGE FOR COMPANY-->
         <div>
             <ul>
                 <li>
@@ -71,6 +72,7 @@
                 Philadelphia, PA | January 2022 - April 2022        
             </p>
         </div>
+         <!--ADD LOGO IMAGE FOR COMPANY-->
         <div>
             <ul>
                 <li>
@@ -89,6 +91,7 @@
                 Intercourse, PA | July 2019 - September 2021        
             </p>
         </div>
+        <!--ADD LOGO IMAGE FOR COMPANY-->
         <div>
             <ul>
                 <li>
