Adding resized images into code

--- a/experience.html
+++ b/experience.html
@@ -49,6 +49,11 @@
         </div>
         <!--ADD LOGO IMAGE FOR COMPANY-->
         <div>
+            <figure>
+                <img src="media/small/openforge.jpg" alt="Startup Wars" height="183" width="325" loading="lazy">
+            </figure>
+        </div>
+        <div>
             <ul>
                 <li>
                     Conducted research content creation as input for the company’s website articles
@@ -74,6 +79,11 @@
         </div>
          <!--ADD LOGO IMAGE FOR COMPANY-->
         <div>
+            <figure>
+                <img src="media/small/dreamitventures.jpg" alt="Startup Wars" height="108" width="325" loading="lazy">
+            </figure>
+        </div>
+        <div>
             <ul>
                 <li>
                     Wrote blog posts that accompany instructional videos to assist customers on how to best approach a venture capital process            
@@ -92,6 +102,11 @@
             </p>
         </div>
         <!--ADD LOGO IMAGE FOR COMPANY-->
+        <div>
+            <figure>
+                <img src="media/small/plf.avif" alt="Startup Wars" height="230" width="260" loading="lazy">
+            </figure>
+        </div>
         <div>
             <ul>
                 <li>
