--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
         <div>
             <p>
                 Currently, I am a third-year Entrepreneurship & Innovation student at Drexel University. My program is a five-year three-co-op plan. 
-                I have two minors. One in Marketing and one in User Experience & Interaction Design. My goal in life is to run my own business rather than work a corporate job. 
+                I have two minors - one in Marketing and one in User Experience & Interaction Design. My goal in life is to run my own business rather than work a corporate job. 
                 My dream job is to run and operate my own microbrewery or brewpub where I would make specialty flavors and drinks.        
             </p>        
         </div>
