Adding class to img

--- a/experience.html
+++ b/experience.html
@@ -50,7 +50,7 @@
         <!--ADD LOGO IMAGE FOR COMPANY-->
         <div>
             <figure>
-                <img src="media/small/openforge.jpg" alt="Startup Wars" height="183" width="325" loading="lazy">
+                <img src="media/small/openforge.jpg" alt="Startup Wars" height="183" width="325" loading="lazy" class="company">
             </figure>
         </div>
         <div>
@@ -80,7 +80,7 @@
          <!--ADD LOGO IMAGE FOR COMPANY-->
         <div>
             <figure>
-                <img src="media/small/dreamitventures.jpg" alt="Startup Wars" height="108" width="325" loading="lazy">
+                <img src="media/small/dreamitventures.jpg" alt="Startup Wars" height="108" width="325" loading="lazy" class="company">
             </figure>
         </div>
         <div>
@@ -104,7 +104,7 @@
         <!--ADD LOGO IMAGE FOR COMPANY-->
         <div>
             <figure>
-                <img src="media/small/plf.avif" alt="Startup Wars" height="230" width="260" loading="lazy">
+                <img src="media/small/plf.avif" alt="Startup Wars" height="230" width="260" loading="lazy" class="company">
             </figure>
         </div>
         <div>
