--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <main>
         <div>
-            <h1>Welcome To A Peak Into My Life</h1>
+            <h1>Welcome To A Peek Into My Life</h1>
         </div>
         <div>
             <p>
