--- a/books.html
+++ b/books.html
@@ -50,35 +50,35 @@
         <div class="parent">
             <figure class="1">
                 <img alt="coffee" 
-                src="media/small/beforethecoffee.jpg" height="242" width="175" loading="lazy">
+                src="media/small/beforethecoffee.jpg" height="242" width="175" loading="lazy" class="shadow">
             </figure>
         </div>
         <div class="parent">
             <figure class="2">
                 <img alt="subtle art"
-                src="media/small/thesubtleart.jpg" height="262" width="175" loading="lazy">
+                src="media/small/thesubtleart.jpg" height="262" width="175" loading="lazy" class="shadow">
             </figure>
         </div>
         <div class="parent">
             <figure class="3">
-                <img alt="everything is fucked" src="media/small/eif.jpg" height="264" width="175" loading="lazy">
+                <img alt="everything is fucked" src="media/small/eif.jpg" height="264" width="175" loading="lazy" class="shadow">
             </figure>
         </div>
         <div class="parent">
             <figure class="4">
-                <img src="media/small/getyourshittogether.jpg" height="247" width="175" alt="get your shit together" loading="lazy">
+                <img src="media/small/getyourshittogether.jpg" height="247" width="175" alt="get your shit together" loading="lazy" class="shadow">
             </figure>
         </div>
         <div class="parent">
             <figure class="5">
                 <img alt="creative confidence" 
-                src="media/small/creativeconfidence.jpg" height="269" width="175" loading="lazy">
+                src="media/small/creativeconfidence.jpg" height="269" width="175" loading="lazy" class="shadow">
             </figure>
         </div>
         <div class="parent">
             <figure class="6">
                 <img alt="thinking fast and slow" 
-                src="media/small/thinkingfastandslow.jpg" height="276" width="175" loading="lazy">
+                src="media/small/thinkingfastandslow.jpg" height="276" width="175" loading="lazy" class="shadow">
             </figure>
         </div>
     </main>
